<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.productactivedetail.ProductActiveDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_product_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:background="@drawable/default_cat2"
                />

            <TextView
                android:id="@+id/text_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline5"
                />

            <TextView
                android:id="@+id/text_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

            <TextView
                android:id="@+id/text_user_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user_price"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_qr"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/text_showqr"
                    android:textSize="14sp"
                    android:backgroundTint="@color/lightGreen"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    android:layout_weight="1"/>

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/text_edit"
                    android:textSize="14sp"
                    android:backgroundTint="@color/lightGreen"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    android:layout_weight="1"/>

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_national_price"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_national_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_national_price_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_prediction_price"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_prediction_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_prediction_price_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_producer"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_producer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_producer_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_harvest_date"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_harvest_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_harvest_date_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_distributor"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_distributor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_distributor_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_seller"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <TextView
                        android:id="@+id/text_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_seller_value"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/purple_500"
                        />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_desc"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

            <TextView
                android:id="@+id/text_desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_desc_value"
                android:layout_marginTop="10dp"
                android:textAppearance="?attr/textAppearanceBody1"
                />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>