<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_product_history"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@drawable/default_cat1"
            android:contentDescription="@string/product_catalog_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:layout_weight="2"
                    android:text="@string/text_product_name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/lightGreen">

                    <TextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_status"
                        android:padding="5dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/product_catalog_category"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"
                    android:text="@string/text_producer"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_producer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_producer_name"
                    android:layout_marginStart="16dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"
                    android:text="@string/text_distributor"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_distributor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distributor_name"
                    android:layout_marginStart="16dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"
                    android:text="@string/text_seller"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_seller_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_seller_name"
                    android:layout_marginStart="16dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>