<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.showqr.ShowQrActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline5"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_producer"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_producer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_producer_value"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_harvest_date"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_harvest_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_harvest_date_value"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_distributor"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_distributor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_distributor_value"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_seller"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />

                <TextView
                    android:id="@+id/text_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_seller_value"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/purple_500"
                    />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/img_qr"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="@drawable/default_cat1"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>